<resources>
    <string name="app_name">DicaroBank</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hola %s</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_positive_button">Aceptar</string>
    <string name="dialog_negative_button">Cancelar</string>

    <!--Drawer nav menu-->
    <string name="menu_globalPosition">Posición global</string>
    <string name="fragment_transaction">Detalle transferencia</string>
    <string name="menu_transaction_service">Realizar transferencia</string>
    <string name="menu_bizum_service">Bizum</string>
    <string name="fragment_contacts">Contactos</string>
    <string name="fragment_bizum_details">Realizar bizum</string>
    <string name="menu_logout">Cerrar sesión</string>

    <!--LogIn-->
    <string name="et_dni_login">Usuario - DNI</string>
    <string name="et_password_login">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="txv_no_client">¿Aún no eres cliente?</string>
    <string name="link_singUp">Registrate</string>
    <string name="logo_dicaro_bank">Logo Dicaro Bank</string>

    <!--Logout Dialog-->
    <string name="tittle_logout_dialog">¿Ya te vas?</string>
    <string name="tv_logout_dialog">Se va a cerrar la sesión. ¿Desea continuar?</string>

    <!--SingUp-->
    <string name="arrow_to_go_back">Arrow to go back</string>
    <string name="txv_singupText">Registrate ahora y accede a todos los beneficios de la mejor banca online.</string>
    <string name="et_dni_singUp">Dni</string>
    <string name="et_name_singUp">Nombre</string>
    <string name="et_surname_singUp">Apellidos</string>
    <string name="et_phone_singUp">Teléfono</string>
    <string name="et_email_singUp">Email</string>
    <string name="et_password_singUp">Contraseña</string>
    <string name="btn_singUp">Registrar</string>
    <string name="required_field">Campo obligatorio.</string>
    <string name="dni_pattern">Formato incorrecto (Ej. 00000000A).</string>
    <string name="dni_no_valid">DNI incorrecto.</string>
    <string name="phone_pattern">El número de teléfono debe tener 9 dígitos.</string>
    <string name="email_pattern">Email no valido (Ej. example@example.com).</string>
    <string name="tittle_welcome_dialog">Dicaro Bank</string>
    <string name="tv_welcome_dialog">Le damos la bienvenida a Dicaro Bank. Puede acercarse a su cajero más cercano para realizar su primer deposito.</string>


    <!--Fragment Global Position-->
    <string name="account_number">Número de cuenta:</string>
    <string name="account_balance">Balance:</string>
    <string name="account_transtactionsHistory">Historial de movimientos</string>

    <!--Fragment Transaction Details-->
    <string name="transactionDetail_info_tv">Detalle de transferencia</string>
    <string name="transactionDetail_date">Fecha transferencia: %s</string>
    <string name="transactionDetail_amount">Cantidad: %s €</string>
    <string name="transactionDetail_detail">Detalle: %s</string>
    <string name="transactionDetail_originAccount">Cuenta de origen: %s</string>
    <string name="transactionDetail_destinyAccount">Cuenta de destino: %s</string>

    <!--Fragment TransactionService - Issue Transaction-->
    <string name="transactionService_origin_account_number">Origen: %s</string>
    <string name="transactionService_origin_account_balance">%s €</string>
    <string name="transactionService_available">Disponible</string>
    <string name="transactionService_iban">IBAN</string>
    <string name="transactionService_name">Nombre</string>
    <string name="transactionService_surname">Apellidos</string>
    <string name="transactionService_detail">Detalle transferencia</string>
    <string name="amount">Cantidad</string>
    <string name="transactionService_issue">Emitir transferencia</string>
    <string name="tittle_issueTrans_dialog">Transferencia</string>
    <string name="tv_issueTrans_dialog">Se va a realizar un transferencia de %s €, ¿esta seguro?</string>

    <!--Fragment BizumService-->
    <string name="bizumService_min_max_tv">Min. 0.5 € - Max. 300 €</string>
    <string name="bizumService_incorrect_amount">Cantidad incorrecta</string>
    <string name="bizumService_optional_message">Mensaje (opcional)</string>
    <string name="bizumService_select_contact">Buscar contacto</string>

    <!--Fragment Contacts-->
    <string name="contacts_select_contact_tv">Seleccione un contacto</string>
    <string name="contacts_contactIcon_img">Icono de contacto</string>

    <!--Fragment BizumDetails-->
    <string name="bizumDetails_info_tv">Se va a realizar en siguiente bizum</string>
    <string name="bizumDetails_amount">Cantidad: %s €</string>
    <string name="bizumDetails_message">Detalle: %s</string>
    <string name="bizumDetails_noMessage">Detalle: no hay mensaje</string>
    <string name="bizumDetails_send">Enviar</string>
    <string name="bizumDetails_contact">Contacto: %s</string>
</resources>