<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_700"
    tools:context=".view.trasactionService.TransactionServiceFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="108dp"
        android:layout_height="105dp"
        android:contentDescription="@string/logo_dicaro_bank"
        android:src="@drawable/logo_dicaro_bank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/originAccountNumber_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactionService_origin_account_number"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/availableAmount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/transactionService_origin_account_balance"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/availableAmount_tv"
            android:layout_alignParentEnd="true"
            android:text="@string/transactionService_available"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/destinyAccountNumber_et"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:hint="@string/transactionService_iban"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <EditText
        android:id="@+id/destinyUserName_et"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:hint="@string/transactionService_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/destinyAccountNumber_et"
        app:layout_constraintStart_toStartOf="@+id/destinyAccountNumber_et"
        app:layout_constraintTop_toBottomOf="@+id/destinyAccountNumber_et" />

    <EditText
        android:id="@+id/destinyUserSurname_et"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:hint="@string/transactionService_surname"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/destinyUserName_et"
        app:layout_constraintStart_toStartOf="@+id/destinyUserName_et"
        app:layout_constraintTop_toBottomOf="@+id/destinyUserName_et" />

    <EditText
        android:id="@+id/transactionDetail_et"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:hint="@string/transactionService_detail"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/destinyUserSurname_et"
        app:layout_constraintStart_toStartOf="@+id/destinyUserSurname_et"
        app:layout_constraintTop_toBottomOf="@+id/destinyUserSurname_et" />

    <EditText
        android:id="@+id/destinyAmount_et"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/transactionDetail_et"
        app:layout_constraintStart_toStartOf="@+id/transactionDetail_et"
        app:layout_constraintTop_toBottomOf="@+id/transactionDetail_et" />

    <Button
        android:id="@+id/issueTransaction_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue_200"
        android:text="@string/transactionService_issue"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinyAmount_et" />


</androidx.constraintlayout.widget.ConstraintLayout>